# Vertex

./: .gitignore  extract_frames_viz.py  pyproject.toml  run.ps1
engine/: pyproject.toml
engine/tests/: test_bowstring.py  test_session_io.py
engine/vertex/: bowstring.py  core.py  hud.py  pipeline.py  server.py  session_io.py  visualize.py
engine/vertex/models/: constants.py  display.py  gold.py  schema.py
scripts/: dev.ps1  validate_media.ps1
src/vertex/: __init__.py  __main__.py  action_logic.py  bio_lab.py  pose_hub.py  streamer.py
src/vertex/models/: __init__.py  schema.py
tests/: conftest.py  test_action_logic.py  test_bio_lab.py  test_models.py  test_pose_hub.py  test_streamer.py
tools/: extract_frames.py  test_extract_frames.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/layout/: Sidebar.tsx  TopBar.tsx
ui/src/components/live/: BioGauges.tsx  ShotTable.tsx  StatePanel.tsx  StatsBar.tsx  VideoFeed.tsx
ui/src/components/shared/: StatusDot.tsx
ui/src/hooks/: useVertexStream.ts
ui/src/pages/: LiveDashboard.tsx  Sessions.tsx  Settings.tsx
ui/src/types/: vertex.ts
